--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,26 @@
                 <button class="botao secundario"> Abrir o Discord no seu navegador </button>
             </div>
         </div>
-
     </header>
+
+    <main class="funcionalidades">
+        <div class="container">
+
+            <section class="funcionalidade">
+                <div class="conteudo-funcionalidade">
+                    <div class="imagem-funcionalidade">
+                        <img src="Image/img-section-01.png" alt="Interface Discord com canais organizados" class="imagem-feature">
+                    </div>
+                        <div class="texto-funcionalidade">
+                            <h2> Crie um espaço controlado por convite onde você se sinta em casa </h2>
+                            <p>Os servidores Discord são organizados em canais com assuntos para você colaborar, compartilhar ou só conversar sobre o seu dia 
+                            sem entupir um chat geral.</p>
+                        </div>
+                    </div>
+            </section>
+
+            
+        </div>
+    </main>
 </body>
 </html>
