--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="hero">
         <div class="container">
-            <h1>IMAGINE UM LUGAR...</h1>
+            <h1>IMAGINE UM <br> LUGAR...</h1>
             <p>...onde você pode pertencer a um clube escolar, um grupo de gamers, ou uma comunidade artística mundial. Onde você e alguns amigos podem passar um tempo juntos. Um lugar que torna fácil conversar todos os dias e socializar com mais frequência.</p>
             <div class="botoes">
                 <button class="botao primario"> Baixar para Windows </button>
