--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Style.css" type="text/css">
 </head>
 <body>
-    <header class="hero">
+    <header class="hero"> <!--Inicio da Página-->>
         <div class="container">
             <h1>IMAGINE UM <br> LUGAR...</h1>
             <p>...onde você pode pertencer a um clube escolar, um grupo de gamers, ou uma comunidade artística mundial. Onde você e alguns amigos podem passar um tempo juntos. Um lugar que torna fácil conversar todos os dias e socializar com mais frequência.</p>
@@ -22,23 +22,67 @@
     </header>
 
     <main class="funcionalidades">
-        <div class="container">
 
-            <section class="funcionalidade">
-                <div class="conteudo-funcionalidade">
+            <section class="funcionalidade"><!--Primeira Landing Page-->
+                <div class="container conteudo-funcionalidade">
                     <div class="imagem-funcionalidade">
                         <img src="Image/img-section-01.png" alt="Interface Discord com canais organizados" class="imagem-feature">
                     </div>
-                        <div class="texto-funcionalidade">
-                            <h2> Crie um espaço controlado por convite onde você se sinta em casa </h2>
-                            <p>Os servidores Discord são organizados em canais com assuntos para você colaborar, compartilhar ou só conversar sobre o seu dia 
-                            sem entupir um chat geral.</p>
-                        </div>
+                    <div class="texto-funcionalidade">
+                        <h2> Crie um espaço controlado por convite onde você se sinta em casa </h2>
+                        <p>Os servidores Discord são organizados em canais com assuntos para você colaborar, compartilhar ou só conversar sobre o seu dia 
+                        sem entupir um chat geral.</p>
                     </div>
+                </div>
             </section>
 
-            
-        </div>
+             <section class="funcionalidade reverso grey"><!--Segunda Landing Page-->
+                <div class="container conteudo-funcionalidade reverso">
+                    <div class="texto-funcionalidade">
+                        <h2>Aqui é fácil se encontrar</h2>
+                        <p>Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, 
+                           sem nem ter que fazer a chamada.</p>
+                    </div>
+                    <div class="imagem-funcionalidade">
+                        <img src="Image/img-section-02.png" alt="Chat de voz Discord" class="imagem-feature2">
+                    </div>
+                </div>          
+            </section>
+
+            <section class="funcionalidade"><!--Terceira Landing Page-->
+                <div class="container conteudo-funcionalidade">
+                    <div class="imagem-funcionalidade">
+                        <img src="Image/img-section-03.png" alt="Interface Discord com canais organizados" class="imagem-feature">
+                    </div>
+                    <div class="texto-funcionalidade">
+                        <h2> Para poucos e para muitos </h2>
+                        <p>Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais
+                           aos membros, monte canais privados e muito mais.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="tecnologia reverso grey"> <!--Ultima Landing Page-->
+                    <div class="texto-funcionalidade">
+                        <h2>TECNOLOGIA DE CONEXÃO <br>CONFIÁVEL</h2>
+                        <p>Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por 
+                           vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.
+                        </p>
+                    </div>
+                    <div class="imagem-funcionalidade">
+                        <img src="Image/img-section-04.png" alt="Chat de voz Discord" class="imagem-feature3">
+                    </div>         
+            </section>
     </main>
+
+    <footer class="rodape">
+        <div class="marca-rodape">
+            <img src="Image/logo.png" alt="Discord" class="logo-rodape" />
+        </div>
+    </footer>
+
+  <script src="script.js"></script>
+ 
 </body>
 </html>
