--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Style.css" type="text/css">
 </head>
 <body>
-    <header class="hero"> <!--Inicio da Página-->>
+    <header class="hero"> <!--Inicio da Página-->
         <div class="container">
             <h1>IMAGINE UM <br> LUGAR...</h1>
             <p>...onde você pode pertencer a um clube escolar, um grupo de gamers, ou uma comunidade artística mundial. Onde você e alguns amigos podem passar um tempo juntos. Um lugar que torna fácil conversar todos os dias e socializar com mais frequência.</p>
